build/log/idf_py_stdout_output_1291188
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/david/esp/panel_matter/build/bootloader/esp-idf/esptool_py && /home/david/.espressif/python_env/idf5.2_py3.12_env/bin/python /home/david/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/david/esp/panel_matter/build/bootloader/bootloader.bin
Bootloader binary size 0x5950 bytes. 0x26b0 bytes (30%) free.
[2/10] No install step for 'bootloader'
[3/10] Building C object esp-idf/wifi_conect/CMakeFiles/__idf_wifi_conect.dir/wifi_conect.c.obj
FAILED: esp-idf/wifi_conect/CMakeFiles/__idf_wifi_conect.dir/wifi_conect.c.obj 
/home/david/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DCHIP_SYSTEM_CONFIG_USE_LWIP=1 -DESP_PLATFORM -DIDF_VER=\"v5.2.3\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/david/esp/panel_matter/build/config -I/home/david/esp/panel_matter/components/wifi_conect -I/home/david/esp/esp-idf/components/newlib/platform_include -I/home/david/esp/esp-idf/components/freertos/config/include -I/home/david/esp/esp-idf/components/freertos/config/include/freertos -I/home/david/esp/esp-idf/components/freertos/config/xtensa/include -I/home/david/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/david/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/david/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/david/esp/esp-idf/components/freertos/esp_additions/include -I/home/david/esp/esp-idf/components/esp_hw_support/include -I/home/david/esp/esp-idf/components/esp_hw_support/include/soc -I/home/david/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/david/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/david/esp/esp-idf/components/heap/include -I/home/david/esp/esp-idf/components/log/include -I/home/david/esp/esp-idf/components/soc/include -I/home/david/esp/esp-idf/components/soc/esp32s3 -I/home/david/esp/esp-idf/components/soc/esp32s3/include -I/home/david/esp/esp-idf/components/hal/platform_port/include -I/home/david/esp/esp-idf/components/hal/esp32s3/include -I/home/david/esp/esp-idf/components/hal/include -I/home/david/esp/esp-idf/components/esp_rom/include -I/home/david/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/david/esp/esp-idf/components/esp_rom/esp32s3 -I/home/david/esp/esp-idf/components/esp_common/include -I/home/david/esp/esp-idf/components/esp_system/include -I/home/david/esp/esp-idf/components/esp_system/port/soc -I/home/david/esp/esp-idf/components/esp_system/port/include/private -I/home/david/esp/esp-idf/components/xtensa/esp32s3/include -I/home/david/esp/esp-idf/components/xtensa/include -I/home/david/esp/esp-idf/components/xtensa/deprecated_include -I/home/david/esp/esp-idf/components/lwip/include -I/home/david/esp/esp-idf/components/lwip/include/apps -I/home/david/esp/esp-idf/components/lwip/include/apps/sntp -I/home/david/esp/esp-idf/components/lwip/lwip/src/include -I/home/david/esp/esp-idf/components/lwip/port/include -I/home/david/esp/esp-idf/components/lwip/port/freertos/include -I/home/david/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/david/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/david/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/david/esp/esp-idf/components/esp_event/include -I/home/david/esp/esp-idf/components/esp_wifi/include -I/home/david/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/david/esp/esp-idf/components/esp_phy/include -I/home/david/esp/esp-idf/components/esp_phy/esp32s3/include -I/home/david/esp/esp-idf/components/esp_netif/include -I/home/david/esp/esp-idf/components/nvs_flash/include -I/home/david/esp/esp-idf/components/spi_flash/include -I/home/david/esp/esp-idf/components/esp_partition/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -O2 -fmacro-prefix-map=/home/david/esp/panel_matter=. -fmacro-prefix-map=/home/david/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/wifi_conect/CMakeFiles/__idf_wifi_conect.dir/wifi_conect.c.obj -MF esp-idf/wifi_conect/CMakeFiles/__idf_wifi_conect.dir/wifi_conect.c.obj.d -o esp-idf/wifi_conect/CMakeFiles/__idf_wifi_conect.dir/wifi_conect.c.obj -c /home/david/esp/panel_matter/components/wifi_conect/wifi_conect.c
/home/david/esp/panel_matter/components/wifi_conect/wifi_conect.c: In function 'wifi_conect':
/home/david/esp/panel_matter/components/wifi_conect/wifi_conect.c:71:9: error: expected expression before '...' token
   71 |         ...
      |         ^~~
In file included from /home/david/esp/esp-idf/components/esp_hw_support/include/esp_intr_alloc.h:12,
                 from /home/david/esp/esp-idf/components/esp_hw_support/include/esp_cpu.h:20,
                 from /home/david/esp/esp-idf/components/esp_hw_support/include/spinlock.h:11,
                 from /home/david/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos/portmacro.h:49,
                 from /home/david/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/portable.h:57,
                 from /home/david/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:69,
                 from /home/david/esp/panel_matter/components/wifi_conect/wifi_conect.c:4:
/home/david/esp/panel_matter/components/wifi_conect/wifi_conect.c:73:59: error: 'ip_info' undeclared (first use in this function)
   73 |         ESP_ERROR_CHECK(esp_netif_set_ip_info(sta_netif, &ip_info));
      |                                                           ^~~~~~~
/home/david/esp/esp-idf/components/esp_common/include/esp_err.h:117:30: note: in definition of macro 'ESP_ERROR_CHECK'
  117 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/home/david/esp/panel_matter/components/wifi_conect/wifi_conect.c:73:59: note: each undeclared identifier is reported only once for each function it appears in
   73 |         ESP_ERROR_CHECK(esp_netif_set_ip_info(sta_netif, &ip_info));
      |                                                           ^~~~~~~
/home/david/esp/esp-idf/components/esp_common/include/esp_err.h:117:30: note: in definition of macro 'ESP_ERROR_CHECK'
  117 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
[4/10] Completed 'bootloader'
ninja: build stopped: subcommand failed.
